--- a/lesson-15/views/subscribers.ejs
+++ b/lesson-15/views/subscribers.ejs
@@ -2,6 +2,11 @@
 <!-- @TODO: Listing 15.3 (p. 217)-->
 
 <!-- 구독자 정보들을 탐색 (forEach)-->
-
+<% subscribers.forEach(function(s) { %>
+<div class="subscribers">
+    <h2><%= s.name %></h2>
+    <p><%= s.email %></p>
+</div>
+<% }); %>
 <!-- 뷰로 구독자 데이터 삽입 -->
 
